<resources>
    <string name="app_name">FoodAce</string>
    <string name="get_started">Get Started!</string>
    <string name="categories">Categories</string>
    <string name="populars">Populars</string>
    <string name="search_bar_hint">Look up for food</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="accountFragmentSalutation">Hi, %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_failed_msg">Wrong username or password!</string>
    <string name="register">Register</string>
    <string name="price_string">$%1$.2f</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="your_cart">Your Cart</string>
    <string name="removed_from_cart_snack_text">%s removed from cart.</string>
    <string name="order_recap">Order Recap</string>
    <string name="food">Food:</string>
    <string name="taxes">Taxes:</string>
    <string name="del_fees">Delivery Fees:</string>
    <string name="total">Total: $%1$.2f</string>
    <string name="order">Order</string>
    <string name="cart_empty_str">Hey, go shopping! Your cart is empty!</string>
    <string name="your_favorite_food">Your Favorite Food</string>
    <string name="keep_me_logged">Keep me logged in</string>
    <string name="search_for_food">Search for food</string>
    <string name="search_res">Search Results</string>
    <string name="burger">Burger</string>
    <string name="pizza">Pizza</string>
    <string name="hotdog">Hotdog</string>
    <string name="drink">Drink</string>
    <string name="dessert">Dessert</string>
</resources>