<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".HomeFragment">

    <TextView
        android:id="@+id/categoriesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/categories"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainSearchBar"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/categoriesList"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@+id/categoriesLabel"
    app:layout_constraintTop_toBottomOf="@+id/categoriesLabel"
    tools:itemCount="5"
    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    tools:layout_conversion_absoluteHeight="0dp"
    tools:layout_conversion_absoluteWidth="0dp"
    tools:listitem="@layout/category_view_holder"
    tools:orientation="horizontal" />

<TextView
    android:id="@+id/popularsLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="24dp"
    android:layout_weight="0.2"
    android:text="@string/populars"
    android:textColor="@color/dark_blue"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/categoriesList"
    tools:layout_conversion_absoluteHeight="0dp"
    tools:layout_conversion_absoluteWidth="0dp" />

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/popularsList"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@+id/popularsLabel"
    app:layout_constraintTop_toBottomOf="@+id/popularsLabel"
    tools:itemCount="5"
    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    tools:layout_conversion_absoluteHeight="0dp"
    tools:layout_conversion_absoluteWidth="0dp"
    tools:listitem="@layout/popular_food_view_holder"
    tools:orientation="horizontal">


</androidx.recyclerview.widget.RecyclerView>

    <SearchView
        android:id="@+id/mainSearchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/search_bar_bground"
        android:iconifiedByDefault="false"
        android:queryBackground="@null"
        android:queryHint="@string/search_for_food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>